chore: clear readme

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,11 @@
   "plugins": ["react-refresh", "@typescript-eslint"],
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-type-checked",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:react-hooks/recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
     "airbnb",
     "airbnb/hooks"
   ],
